--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .hero-section{
     background-color:#28282f;
-    padding: 0px 40px;
+    padding: 0px 50px;
 }
 
 ul {
@@ -21,12 +21,14 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 0px;
     
 }
 
 .header .left-side {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header .social-icons img{
@@ -50,4 +52,8 @@ ul {
 
 .header .right-side ul li{
     margin-right: 20px;
+}
+
+.header .social-icons {
+    margin-left: 10px;
 }
